# morphing-lattices

./: .gitignore  LICENSE  README.md  pyproject.toml
data/W_M/: WM_optimization_data.pickle
data/inverse_design/: snake_optimization_data.pickle
examples/: lattice_mwe.ipynb  triangular_lattice.ipynb
exp/: Alternating HTNI Pacman.npy  HTNI_all.npy  HTNI_all_lattice_stretch_vs_temp.csv  HTNI_pacman.npy  HTNI_pacman_lattice_stretch_vs_temp.csv  HTNI_teeth.npy  HTNI_teeth_lattice_stretch_vs_temp.csv  LTNI_all.npy  LTNI_all_lattice_stretch_vs_temp.csv  LTNI_pacman.npy  LTNI_pacman_lattice_stretch_vs_temp.csv  LTNI_teeth.npy  LTNI_teeth_lattice_stretch_vs_temp.csv  Long Strip Bilayer Lattice.npy  lattice_thermal_response.ipynb
exp/inversely_designed_lattices/: README.md
exp/lattice_stretch_evolution/: HTNI_all_lattice_stretch_vs_temp.csv  HTNI_pacman_lattice_stretch_vs_temp.csv  HTNI_teeth_lattice_stretch_vs_temp.csv  LTNI_all_lattice_stretch_vs_temp.csv  LTNI_pacman_lattice_stretch_vs_temp.csv  LTNI_teeth_lattice_stretch_vs_temp.csv
exp/mechanical_data/: 20230512_HTNI_LTNI_actuationstrains_highgranularityTemp3355.csv  LTNI and HTNI LCE strains and moduli from Arda.csv  youngs_mod_LCEstrips_DataForBertoldiGroup_updated202307.csv
inverse_design/: long_strip.ipynb  square.py  square_pareto_sweep.py
inverse_design/shape_morphing/: long_strip.ipynb
morphing_lattices/: dynamics.py  energy.py  geometry.py  kinematics.py  loading.py  optimization.py  plotting.py  structure.py  utils.py
tests/: test_morphing_lattices.py
(+141 files in other folders)
