[tool.poetry]
name        = "morphing-lattices"
version     = "0.1.0"
description = "Simulation and design of shape morphing LCE lattices"
authors     = ["Giovanni Bordiga <gbordiga@seas.harvard.edu>"]
license     = "MIT"
readme      = "README.md"

[tool.poetry.dependencies]
python     = "^3.9"
jax        = "^0.4.13"
jaxlib     = "^0.4.13"
matplotlib = "^3.7.2"
ipykernel  = "^6.24.0"
ipympl     = "^0.9.3"
pandas = "^2.0.3"
nlopt = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest   = "^7.4.0"
autopep8 = "^2.0.2"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
